--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ background-image: url('assets/images/profile.jpeg')">
             <div class="row">
               <div class="col-md-4">
                 <img src="./assets/images/assg.jpg" class="img-responsive" alt="">
-                <h3 class="h5">Assignment 1</h3>
+                <h3 class="h5"><a href="assignment1.html">Assignment 1</a></h3>
                 <p>February 15</p>
               </div>
             </div>
